# numgrid

./: .clang-format  .gitignore  .travis.yml  .zenodo.json  AUTHORS.md  CHANGES.md  CHANGES.rst  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  VERSION  example.py  requirements.txt  setup  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-wheels.yml  package-pypi.yml  package.yml  test.yml
api/: CMakeLists.txt  numgrid.F90  numgrid.f90  numgrid.h  numgrid.py  numgrid_c_api.cpp  numgrid_c_api.h
cmake/: OptimizeForArchitecture.cmake  autocmake.cfg  autocmake.yml  bootstrap.py  numgridConfig.cmake.in  update.py
cmake/autocmake/: configure.py  generate.py  interpolate.py
cmake/compilers/: CFlags.cmake  CXXFlags.cmake  Clang.CXX.cmake  ConfigCompilerFlags.cmake
cmake/custom/: GNUdirs.cmake  api.cmake  c++11.cmake  custom.cmake  export.cmake  external.cmake  fc_optional.cmake  gen_version.py  gtest.cmake  include_paths.cmake  numgrid.cmake  rpath.cmake  src.cmake  static_library.cmake  test.cmake  version.cmake
cmake/downloaded/: autocmake_Clang.CXX.cmake  autocmake_GNU.CXX.cmake  autocmake_Intel.CXX.cmake  autocmake_cc.cmake  autocmake_ccache.cmake  autocmake_code_coverage.cmake  autocmake_custom_color_messages.cmake  autocmake_cxx.cmake  autocmake_default_build_paths.cmake  autocmake_definitions.cmake  autocmake_export_header.cmake  autocmake_fc.cmake  autocmake_fc_optional.cmake  autocmake_googletest.cmake  autocmake_safeguards.cmake  autocmake_src.cmake
cmake/lib/: config.py
cmake/modules/: GNU.CXX.cmake  UseC.cmake  UseCodeCoverage.cmake  UseSafeGuards.cmake  api.cmake  autocmake_GNU.CXX.cmake  autocmake_Intel.CXX.cmake  autocmake_code_coverage.cmake  autocmake_cpp.cmake  autocmake_cxx.cmake  autocmake_default_build_paths.cmake  autocmake_safe_guards.cmake  autocmake_src.cmake  custom.cmake  gtest.cmake  test.cmake
include/: CMakeLists.txt  parameters.h
interfaces/: numgrid_c_interface.cpp  numgrid_c_interface.h
numgrid/: AtomGrid.cpp  AtomGrid.h  CMakeLists.txt  __init__.py  becke_partitioning.cpp  becke_partitioning.h  bragg.cpp  bragg.h  cffi_helpers.py  error_handling.h  grid_radial.cpp  grid_radial.h  interface_file_names.cfg.in  numgrid.f90  numgrid.h  parameters.h  tabulated_exponents.cpp
numgrid/lebedev/: sphere_lebedev_rule.cpp
numgrid/tabulated/: README.rst  extract.py  tabulated_exponents.cpp  tabulated_exponents.h
src/: AtomGrid.cpp  AtomGrid.h  CMakeLists.txt  Grid.cpp  Grid.h  MemAllocator.cpp  MemAllocator.h  atom.rs  becke_partitioning.cpp  becke_partitioning.h  becke_partitioning.rs  bragg.cpp  bragg.h  bragg.rs  bse.rs  comparison.rs  grid_constants.h  grid_radial.cpp  grid_radial.h  io.cpp  io.h  lebedev.rs  lib.rs  parameters.h  parameters.rs  python.rs  radial.rs  rolex.cpp  rolex.h  version.cpp
src/lebedev/: CMakeLists.txt
src/tables/: README.md  coordinates.rs  generate.py  mod.rs  offsets.rs  weights.rs
test/: CMakeLists.txt  reference_grid.txt  test.F90  test.cpp  test.f90  test.py  test_explicit.cpp  test_explicit.f90  test_tabulated.cpp  test_tabulated.f90  valgrind.py
test/reference_grid/: cc-pVDZ.txt  dyall.v3z.txt
tests/: integration_test.rs  test.py
tests/reference/: atom.txt  molecule.txt
